[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bypass-pucit"
dynamic = ["version"]
description = " As We can't access internet in our terminals / CLI ,this tool will allow you to use internet there by setting global proxies for all famous packages managers and CLI tools like git,pip,npm and others"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["pucit","PUCIT","internet"]
authors = [
  { name = "MIZI", email = "gem920se@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/mudassir-cpp/bypass_pucit#readme"
Issues = "https://github.com/mudassir-cpp/bypass_pucit/issues"
Source = "https://github.com/mudassir-cpp/bypass_pucit"

[project.script]
bypass_pucit="bypass_pucit.main:main"

[tool.hatch.version]
path = "src/bypass_pucit/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/bypass_pucit tests}"

[tool.coverage.run]
source_pkgs = ["bypass_pucit", "tests"]
branch = true
parallel = true
omit = [
  "src/bypass_pucit/__about__.py",
]

[tool.coverage.paths]
bypass_pucit = ["src/bypass_pucit", "*/bypass-pucit/src/bypass_pucit"]
tests = ["tests", "*/bypass-pucit/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
